# ai-training-o11y

./: .gitignore  LICENSING.md  Makefile  README.md  ai-training-o11y.code-workspace  cleanup-volumes.sh  docker-compose-jupyter.yml  docker-compose-pytorch.yml  docker-compose.yml
.config/mimir/: mimir.yml
.github/: ci.yml  release-plugin.yml
.github/workflows/: build-plugin.yml  ci.yml  publish-python.yml  release-plugin.yml  run-tests.yml
ai-observability-fe/: docker-compose.yaml  go.mod  go.sum  package-lock.json  package.json
ai-observability-fe/pkg/: main.go
ai-observability-fe/src/: README.md  constants.ts  plugin.json
ai-training-api/: Dockerfile  Makefile  air.ai-training-api.toml  go.mod  go.sum  main.go
ai-training-api/app/: admin.go  api.go  api_test.go  app.go  app_test.go  model_metrics.go  model_metrics_test.go
ai-training-api/internal/: db.go  tracing.go
ai-training-api/middleware/: middleware.go  middleware_test.go
ai-training-api/model/: group.go  metadata.go  model_metrics.go  process.go  training.go
docker-compose/: 0-createdb.sql  databases.yml
grafana-aitraining-app/: .gitignore  README.md  go.mod  package.json
o11y/: .gitignore  README.md  build.py  hatch_build.py  pyproject.toml  smoke.ipynb
o11y/o11y/: __init__.py
o11y/o11y/_internal/: client.py  metadata_client.py
o11y/o11y/_internal/util/: validate_url.py
o11y/o11y/exported/: finish.py  init.py  log.py  update.py
o11y/src/go-plugin/: go.mod  hello.go
o11y/src/o11y/: __init__.py
o11y/src/o11y-go/: go.mod  hello.go
o11y/src/o11y/_internal/: __init__.py  client.py  o11y_go.py
o11y/src/o11y/_internal/util/: validate_url.py
o11y/src/o11y/exported/: finish.py  init.py  log.py  update.py
o11y/tests/: login_test.py  test_client.py  test_log.py
observability/: .gitignore  README.md  pyproject.toml
tools/: image-tag
(+83 files in other folders)
