[project]
name = "o11y"
version = "0.1.0"
description = "Exporter for Grafana's AI Observability platform"
authors = [{name = "Grafana Labs", email = "info@grafana.com"}]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/o11y"]
