[project]
name = "o11y"
version = "0.1.0"
description = "Exporter for Grafana's AI Observability platform"
authors = [{name = "Grafana Labs", email = "info@grafana.com"}]
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "requests>=2.31.0",
    "setuptools>=67.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
packages = ["src/o11y", "src/o11y-go"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.pytest.ini_options]
pythonpath = [ "src" ]
